disabled project env management from uv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = []
 
+[tool.uv]
+managed = false
+
 [tool.ruff]
 # Same as Black.
 line-length = 88
