--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,19 @@ version = "0.1.0"
 description = "A reinforcement learning gym environment for autonomous racing"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "gymnasium>=1.0.0",
+    "matplotlib>=3.9.2",
+    "numpy>=2.1.3",
+    "scipy>=1.14.1",
+]
 
-[tool.uv]
-managed = false
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["."]
 
 [tool.ruff]
 # Same as Black.
