--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,23 @@
+[project]
+name = "pilot-gym"
+version = "0.1.0"
+description = "A reinforcement learning gym environment for autonomous racing"
+readme = "README.md"
+requires-python = ">=3.11"
+dependencies = [
+    "gymnasium>=1.0.0",
+    "matplotlib>=3.9.2",
+    "numpy>=2.1.3",
+    "scipy>=1.14.1",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["."]
+
 [tool.ruff]
 # Same as Black.
 line-length = 88
