--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,5 +10,7 @@ repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v5.0.0  # Specify the version
   hooks:
+    - id: check-toml
+    - id: check-yaml
     - id: trailing-whitespace
     - id: end-of-file-fixer
