--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ dependencies = [
     "gymnasium>=1.0.0",
     "matplotlib>=3.9.2",
     "numpy>=2.1.3",
+    "pandas>=2.2.3",
+    "pykan>=0.2.8",
+    "pyyaml>=6.0.2",
     "scipy>=1.14.1",
 ]
 
@@ -40,4 +43,13 @@ select = [
     # "SIM",
     # isort
     "I",
+]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.29.5",
+    "pytest>=8.3.3",
 ]
