--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,14 @@ dependencies = [
     "matplotlib>=3.9.2",
     "numpy>=2.1.3",
     "pandas>=2.2.3",
-    "pykan>=0.2.8",
+    "pip>=24.3.1",
     "pyyaml>=6.0.2",
+    "scikit-learn>=1.5.2",
     "scipy>=1.14.1",
+    "tensorboard>=2.18.0",
+    "torch>=2.5.1",
+    "tqdm>=4.67.1",
+    "tyro>=0.9.2",
 ]
 
 [build-system]
@@ -52,4 +57,17 @@ select = [
 dev = [
     "ipykernel>=6.29.5",
     "pytest>=8.3.3",
+]
+
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
+
+[tool.uv.sources]
+torch = [
+  { index = "pytorch-cpu", marker = "platform_system != 'Darwin'"},
+]
+torchvision = [
+  { index = "pytorch-cpu", marker = "platform_system != 'Darwin'"},
 ]
