--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,10 +64,10 @@ name = "pytorch-cpu"
 url = "https://download.pytorch.org/whl/cpu"
 explicit = true
 
-[tool.uv.sources]
-torch = [
-  { index = "pytorch-cpu", marker = "platform_system != 'Darwin'"},
-]
-torchvision = [
-  { index = "pytorch-cpu", marker = "platform_system != 'Darwin'"},
-]
+# [tool.uv.sources]
+# torch = [
+#   { index = "pytorch-cpu", marker = "platform_system != 'Darwin'"},
+# ]
+# torchvision = [
+#   { index = "pytorch-cpu", marker = "platform_system != 'Darwin'"},
+# ]
