--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,13 @@ dependencies = [
     "matplotlib>=3.9.2",
     "numpy>=2.1.3",
     "pandas>=2.2.3",
-    "pykan>=0.2.8",
     "pyyaml>=6.0.2",
+    "scikit-learn>=1.5.2",
     "scipy>=1.14.1",
+    "tensorboard>=2.18.0",
+    "torch>=2.5.1",
+    "tqdm>=4.67.1",
+    "tyro>=0.9.2",
 ]
 
 [build-system]
