--- a/configurations/training_dynamic_kan_ppo_conf.yaml
+++ b/configurations/training_dynamic_kan_ppo_conf.yaml
@@ -3,27 +3,19 @@ num_steps: 100 # not used, maximum time steps per training episode
 batch_size: 2048 # num_envs * num_steps
 num_minibatches: 32
 minibatch_size: 32 # batch_size / num_minibatches
-num_iterations: 100 # number of training iterations
+num_iterations: 800 # number of training iterations
 total_timesteps: 1000000 # not used
 
 # NN architecture
 
-# KAN
-
-critic_hidden_sizes:
-  - 16
-  - 16
-
 grid: 3 # number of grid intervals
 k: 2 # spline order
 
-# MLP
+critic_hidden_sizes: []
 
-actor_hidden_sizes:
-  - 256
-  - 256
+actor_hidden_sizes: []
 
-update_epochs: 5
+update_epochs: 4
 anneal_lr: true
 capture_video: false
 clip_coef: 0.2
@@ -35,7 +27,7 @@ env_id: pilot_gym/RacingEnv-v0
 exp_name: ppo_continuous_action_kan
 gae_lambda: 0.95
 gamma: 0.99
-learning_rate: 0.0003
+learning_rate: 0.0005
 max_grad_norm: 0.5
 norm_adv: true
 save_model: true
